--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,16 @@ html, body {
   height: 100%;
 }
 
+@layer base {
+  h1 {
+    @apply text-4xl;
+  }
+
+  h2 {
+    @apply text-3xl;
+  }
+}
+
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
